# secure-exec

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
apparmor/: secure-exec-userns
examples/: numpy_pandas.py
nsjail/: install.proto.template  python.proto.template
proxy/: allowlist  tinyproxy.conf
sandbox/: install.sh  installer.py  run.sh  runner.py  seccomp-arch.sh
tests/: conftest.py  test_functionality.py  test_installer.py  test_security.py
